syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (Order);
  rpc GetOrderById (GetOrderByIdRequest) returns (Order);
  rpc ListOrdersByUser (ListOrdersByUserRequest) returns (ListOrdersResponse);
}

message OrderItem {
  string productId = 1;
  string productName = 2;
  int32 quantity = 3;
  double price = 4;
}

message Order {
  string id = 1;
  string userId = 2;
  repeated OrderItem items = 3;
  double totalAmount = 4;
  string status = 5;
  string createdAt = 6;
}

message CreateOrderRequest {
  string userId = 1;
  repeated OrderItem items = 2;
}

message GetOrderByIdRequest {
  string id = 1;
}

message ListOrdersByUserRequest {
  string userId = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}
